{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 5,
  "lineage": "2d2673f6-60b6-9ebd-94b7-cd8f7439b8ca",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097044396389:vpc/vpc-09cfd39017fdb66be",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c847c8b0640f176d",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05509c825139f983f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09cfd39017fdb66be",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0936121930f2ea2e4",
            "owner_id": "097044396389",
            "state": "available",
            "tags": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097044396389:security-group/sg-0f22c151b58fe86c2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f22c151b58fe86c2",
            "ingress": [],
            "name": "terratest-example",
            "name_prefix": null,
            "owner_id": "097044396389",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09cfd39017fdb66be"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-57759286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f22c151b58fe86c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db_instance"
          ]
        }
      ]
    }
  ]
}